# view.tree

./: .gitignore  AGENTS.md  PLAN-prerender.md  README.md  Tree Language Grammar Notation.md  package-lock.json  package.json  ts-config.json
cli/: create.ts  index.ts
server/: completion.ts  (+11 more)
tree-sitter-viewtree/: CMakeLists.txt  COMPLETE.md  Cargo.toml  INDEX.md  Makefile  Package.swift  QUERIES.md  README.md  binding.gyp  example.view.tree  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  simple.tree  test.js  test.tree  test2.tree  test_comment.tree  test_comment_bug.view.tree  test_comment_children.view.tree  test_comment_dedent.view.tree  test_comment_empty.view.tree  test_comment_scope.view.tree  test_debug.js  test_exact_bug.view.tree  test_minimal.tree  test_nested_4levels.tree  test_props.tree  test_requirements.view.tree  test_simple.view.tree  test_simple_indent.tree  test_simple_parse.js  test_structure.tree  test_typed_collections.view.tree  tree-sitter-viewtree.wasm  tree-sitter.json
tree-sitter-viewtree/bindings/c/: tree-sitter-viewtree.pc.in
tree-sitter-viewtree/bindings/go/: binding.go  binding_test.go
tree-sitter-viewtree/bindings/node/: binding.cc  index.js
tree-sitter-viewtree/bindings/python/tests/: test_binding.py
tree-sitter-viewtree/bindings/python/tree_sitter_viewtree/: __init__.py  binding.c
tree-sitter-viewtree/bindings/rust/: build.rs  lib.rs
tree-sitter-viewtree/queries/: highlights.scm  indents.scm  injections.scm
tree-sitter-viewtree/src/: grammar.json  node-types.json  parser.c  scanner.c
(+24 files in other folders)
